[package]
    edition = "2024"
    name    = "rm-referee-protocol"
    version = "0.1.0"

[dependencies]
    crc = "3.3.0"
    deku = { version = "0.19.1", default-features = false, features = [
        "alloc",
        "bits",
    ] }
    serde = { version = "1.0.228", default-features = false, features = [
        "alloc",
        "derive",
    ] }

[dev-dependencies]
    serde_json = "1.0"
